[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/ui/FightApplyItems_UI.gd" type="Script" id=1]
[ext_resource path="res://scripts/ui/Enemy_UI.gd" type="Script" id=2]
[ext_resource path="res://textures/ui/Text.png" type="Texture" id=3]
[ext_resource path="res://textures/enemies/EnemyToken.png" type="Texture" id=4]
[ext_resource path="res://fonts/aliiewriting_dynamicfont.tres" type="DynamicFont" id=5]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 589, 384 )
expand_margin_left = 47.0
expand_margin_right = 38.0
expand_margin_top = 29.0
expand_margin_bottom = 35.0

[node name="Tab_FightApplyItems" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="MainCont" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="AnotherMainCont" type="VBoxContainer" parent="MainCont"]
margin_right = 480.0
margin_bottom = 720.0

[node name="EnemyDataCont" type="MarginContainer" parent="MainCont/AnotherMainCont"]
editor/display_folded = true
margin_right = 480.0
margin_bottom = 152.0

[node name="EnemyDataContainer" type="CenterContainer" parent="MainCont/AnotherMainCont/EnemyDataCont"]
margin_right = 480.0
margin_bottom = 152.0
size_flags_horizontal = 3
script = ExtResource( 2 )

[node name="Pcont" type="PanelContainer" parent="MainCont/AnotherMainCont/EnemyDataCont/EnemyDataContainer"]
margin_left = 124.0
margin_right = 356.0
margin_bottom = 152.0
custom_styles/panel = SubResource( 1 )

[node name="Hbox" type="HBoxContainer" parent="MainCont/AnotherMainCont/EnemyDataCont/EnemyDataContainer/Pcont"]
margin_right = 232.0
margin_bottom = 152.0

[node name="Vbox" type="VBoxContainer" parent="MainCont/AnotherMainCont/EnemyDataCont/EnemyDataContainer/Pcont/Hbox"]
margin_right = 128.0
margin_bottom = 152.0

[node name="EnemyTexture" type="TextureRect" parent="MainCont/AnotherMainCont/EnemyDataCont/EnemyDataContainer/Pcont/Hbox/Vbox"]
margin_right = 128.0
margin_bottom = 128.0
rect_min_size = Vector2( 128, 128 )
texture = ExtResource( 4 )
expand = true

[node name="EnemyName" type="Label" parent="MainCont/AnotherMainCont/EnemyDataCont/EnemyDataContainer/Pcont/Hbox/Vbox"]
margin_top = 132.0
margin_right = 128.0
margin_bottom = 152.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Kliknij mnie!"
align = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MainCont/AnotherMainCont/EnemyDataCont/EnemyDataContainer/Pcont/Hbox"]
margin_left = 132.0
margin_right = 232.0
margin_bottom = 152.0

[node name="EnemyAllowedDice" type="RichTextLabel" parent="MainCont/AnotherMainCont/EnemyDataCont/EnemyDataContainer/Pcont/Hbox/VBoxContainer"]
margin_right = 100.0
margin_bottom = 74.0
rect_min_size = Vector2( 100, 20 )
mouse_filter = 1
size_flags_vertical = 3
custom_fonts/normal_font = ExtResource( 5 )
bbcode_enabled = true
scroll_active = false

[node name="EnemyType" type="RichTextLabel" parent="MainCont/AnotherMainCont/EnemyDataCont/EnemyDataContainer/Pcont/Hbox/VBoxContainer"]
margin_top = 78.0
margin_right = 100.0
margin_bottom = 152.0
size_flags_vertical = 3
custom_fonts/normal_font = ExtResource( 5 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true
scroll_active = false

[node name="Panel" type="Panel" parent="MainCont/AnotherMainCont"]
margin_top = 156.0
margin_right = 480.0
margin_bottom = 156.0
